src/language/tests/success/file2.prez
class Base {
  public int n;

  public Base(int n) {
    this.n = n;
  }

  public virtual String name() {
    return "Base";
  }
}
